--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 <div class="container">
-<div class="card">
+<div class="card card1">
 <h1>Hello, I'm Angelo!</h1>
 <img src="images/profile.jpg" alt="Angelo's Profile Pic">
 <p>I love Github, UX/UI Design, web-development and motorbikes 🏍️. I joined Le Wagon to learn code with entrepreneurs and creative people around the world 🌍.</p>
 <a href="https://en.wikipedia.org/wiki/User_profile" class="btn-blue">Search me on Google!</a>
 </div>
-<div class="card">
+<div class="card card2">
 <h2>Follow me</h2>
 <ul class="social-inline">
   <li>
